[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/fonts/league-spartan-master/LeagueSpartan-Bold.otf" type="DynamicFontData" id=1]
[ext_resource path="res://src/GUI/MainTheme.tres" type="Theme" id=2]
[ext_resource path="res://src/GUI/AutoUpgradePanel/AutoUpgradePanel.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 24
outline_size = 2
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 24
outline_size = 2
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 12
outline_size = 2
font_data = ExtResource( 1 )

[node name="AutoUpgradePanel" type="Panel"]
margin_right = 600.0
margin_bottom = 90.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
price = 100001.0
amount = 9999
title = "Name"

[node name="Button" type="TextureButton" parent="."]
margin_right = 600.0
margin_bottom = 90.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AmountLabel" type="Label" parent="."]
margin_left = 506.731
margin_top = 26.5903
margin_right = 590.731
margin_bottom = 57.5903
grow_horizontal = 0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "x9999"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="Label" parent="."]
margin_left = 8.0
margin_top = 5.0
margin_right = 151.0
margin_bottom = 30.0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Blocker" type="ColorRect" parent="."]
margin_right = 600.0
margin_bottom = 90.0
color = Color( 0, 0, 0, 0.72549 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PriceLabel" type="Label" parent="."]
margin_left = 8.0
margin_top = 67.0
margin_right = 161.0
margin_bottom = 85.0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "100001.000 Doge"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
